# ai-knowledge-service

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/adr/: 0001-use-uv-and-src-layout.md  0002-settings-errors-and-structured-logging.md  0003-repository-service-boundary.md
docs/learning/: week-01-tools-guide-uv-pytest-ruff.md  week-02-2026-07-12.md
docs/tasks/: week-03-repository-service.md
docs/weekly/: week-01-2026-07-11.md  week-02-2026-07-12.md  week-03-2026-07-13.md
src/ai_knowledge_service/: __init__.py  config.py  exceptions.py
src/ai_knowledge_service/domain/: document.py
src/ai_knowledge_service/observability/: logging.py
src/ai_knowledge_service/repositories/: document_repository.py  in_memory_document_repository.py
src/ai_knowledge_service/services/: document_service.py
tests/: conftest.py  test_config.py  test_exceptions.py
tests/domain/: test_document.py
tests/observability/: test_logging.py
tests/repositories/: test_in_memory_document_repository.py
tests/services/: test_document_service.py
