[project]
name = "ai-knowledge-service"
version = "0.1.0"
description = "Document ingestion, retrieval, RAG, and agent-based AI knowledge service"
readme = "README.md"
authors = [
    { name = "jun", email = "byjun92.06@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
]

[project.scripts]
ai-knowledge-service = "ai_knowledge_service:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ai_knowledge_service"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["ai_knowledge_service"]
warn_unused_configs = true
pretty = true
show_error_codes = true
